--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,6 @@
+source 'https://github.com/blodely/LYSpecs.git'
+source 'https://github.com/CocoaPods/Specs.git'
+
 use_frameworks!
 
 target 'LYPopView_Example' do
