--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,11 +6,10 @@ use_frameworks!
 platform :ios, '8.2'
 
 target 'LYPopView_Example' do
-  pod 'LYPopView', :path => '../'
+	pod 'LYPopView', :path => '../'
+	pod 'ConfigKit'
 
-  target 'LYPopView_Tests' do
-    inherit! :search_paths
-
-    
-  end
+	target 'LYPopView_Tests' do
+		inherit! :search_paths
+	end
 end
