--- a/Example/LYPopView/LYPopView-Info.plist
+++ b/Example/LYPopView/LYPopView-Info.plist
@@ -24,6 +24,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>popview demo need to access your camera</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>popview demo need to access your photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>popview demo need to access your photos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
