[Add] background blur effect conf 'popview-bgv-blur-switch'

--- a/LYPopView/Configurations/conf-pop-view-style.plist
+++ b/LYPopView/Configurations/conf-pop-view-style.plist
@@ -58,6 +58,13 @@
 		<key>conf-value</key>
 		<false/>
 	</dict>
+	<key>popview-bgv-blur-switch</key>
+	<dict>
+		<key>name</key>
+		<string>background view blur effect switch</string>
+		<key>conf-value</key>
+		<true/>
+	</dict>
 	<key>popview-min-dismiss-timeinterval</key>
 	<dict>
 		<key>name</key>
