[Modify] default value in lib

--- a/LYPopView/Configurations/conf-pop-view-style.plist
+++ b/LYPopView/Configurations/conf-pop-view-style.plist
@@ -63,7 +63,7 @@
 		<key>name</key>
 		<string>auto dismiss</string>
 		<key>conf-value</key>
-		<false/>
+		<true/>
 	</dict>
 	<key>popview-bgv-blur-switch</key>
 	<dict>
