--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,10 @@
-source 'https://github.com/blodely/LYSpecs.git'
-source 'https://github.com/CocoaPods/Specs.git'
-
 use_frameworks!
 
-platform :ios, '8.2'
+platform :ios, '12.0'
 
 target 'LYPopView_Example' do
 	pod 'LYPopView', :path => '../'
-	pod 'ConfigKit'
+	pod 'LYConfigKit'
 
 	target 'LYPopView_Tests' do
 		inherit! :search_paths
