--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,8 @@
 use_frameworks!
 
 platform :ios, '12.0'
+project './LYPopView.xcodeproj'
+
 
 target 'LYPopView_Example' do
 	pod 'LYPopView', :path => '../'
