--- a/Example/Podfile
+++ b/Example/Podfile
@@ -14,3 +14,14 @@ target 'LYPopView_Example' do
 		inherit! :search_paths
 	end
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      if config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'].to_f < 14.0
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+      end
+    end
+  end
+end
+
